added starter files, created JS file and downloaded GEOJSON file

--- a/tolu.ipynb
+++ b/tolu.ipynb
@@ -2,7 +2,117 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pycountry\n",
+      "  Downloading https://files.pythonhosted.org/packages/16/b6/154fe93072051d8ce7bf197690957b6d0ac9a21d51c9a1d05bd7c6fdb16f/pycountry-19.8.18.tar.gz (10.0MB)\n",
+      "Building wheels for collected packages: pycountry\n",
+      "  Building wheel for pycountry (setup.py): started\n",
+      "  Building wheel for pycountry (setup.py): finished with status 'done'\n",
+      "  Created wheel for pycountry: filename=pycountry-19.8.18-py2.py3-none-any.whl size=10627366 sha256=bbec206c82965036073fedd357c0b9db573429b0c0e32ce61cc336b8ba8a6f29\n",
+      "  Stored in directory: C:\\Users\\Remco\\AppData\\Local\\pip\\Cache\\wheels\\a2\\98\\bf\\f0fa1c6bf8cf2cbdb750d583f84be51c2cd8272460b8b36bd3\n",
+      "Successfully built pycountry\n",
+      "Installing collected packages: pycountry\n",
+      "Successfully installed pycountry-19.8.18\n",
+      "Collecting pyPDF2\n",
+      "  Downloading https://files.pythonhosted.org/packages/b4/01/68fcc0d43daf4c6bdbc6b33cc3f77bda531c86b174cac56ef0ffdb96faab/PyPDF2-1.26.0.tar.gz (77kB)\n",
+      "Building wheels for collected packages: pyPDF2\n",
+      "  Building wheel for pyPDF2 (setup.py): started\n",
+      "  Building wheel for pyPDF2 (setup.py): finished with status 'done'\n",
+      "  Created wheel for pyPDF2: filename=PyPDF2-1.26.0-cp36-none-any.whl size=61092 sha256=92753ba8afb62bbca99b2eac2548ebc20abefd9ad8068b49e4aba3f45fea630a\n",
+      "  Stored in directory: C:\\Users\\Remco\\AppData\\Local\\pip\\Cache\\wheels\\53\\84\\19\\35bc977c8bf5f0c23a8a011aa958acd4da4bbd7a229315c1b7\n",
+      "Successfully built pyPDF2\n",
+      "Installing collected packages: pyPDF2\n",
+      "Successfully installed pyPDF2-1.26.0\n",
+      "Collecting textract\n",
+      "  Downloading https://files.pythonhosted.org/packages/32/31/ef9451e6e48a1a57e337c5f20d4ef58c1a13d91560d2574c738b1320bb8d/textract-1.6.3-py3-none-any.whl\n",
+      "Collecting docx2txt==0.8\n",
+      "  Downloading https://files.pythonhosted.org/packages/7d/7d/60ee3f2b16d9bfdfa72e8599470a2c1a5b759cb113c6fe1006be28359327/docx2txt-0.8.tar.gz\n",
+      "Requirement already satisfied: chardet==3.0.4 in c:\\users\\remco\\anaconda3\\envs\\pythondata\\lib\\site-packages (from textract) (3.0.4)\n",
+      "Collecting argcomplete==1.10.0\n",
+      "  Downloading https://files.pythonhosted.org/packages/4d/82/f44c9661e479207348a979b1f6f063625d11dc4ca6256af053719bbb0124/argcomplete-1.10.0-py2.py3-none-any.whl\n",
+      "Collecting beautifulsoup4==4.8.0\n",
+      "  Downloading https://files.pythonhosted.org/packages/1a/b7/34eec2fe5a49718944e215fde81288eec1fa04638aa3fb57c1c6cd0f98c3/beautifulsoup4-4.8.0-py3-none-any.whl (97kB)\n",
+      "Collecting EbookLib==0.17.1\n",
+      "  Downloading https://files.pythonhosted.org/packages/00/38/7d6ab2e569a9165249619d73b7bc6be0e713a899a3bc2513814b6598a84c/EbookLib-0.17.1.tar.gz (111kB)\n",
+      "Collecting extract-msg==0.23.1\n",
+      "  Downloading https://files.pythonhosted.org/packages/a1/90/84485a914ed90adb5e87df17e626be04162fbba146dfecf34643659a4633/extract_msg-0.23.1-py2.py3-none-any.whl (45kB)\n",
+      "Collecting SpeechRecognition==3.8.1\n",
+      "  Downloading https://files.pythonhosted.org/packages/26/e1/7f5678cd94ec1234269d23756dbdaa4c8cfaed973412f88ae8adf7893a50/SpeechRecognition-3.8.1-py2.py3-none-any.whl (32.8MB)\n",
+      "Collecting pdfminer.six==20181108\n",
+      "  Downloading https://files.pythonhosted.org/packages/8a/fd/6e8746e6965d1a7ea8e97253e3d79e625da5547e8f376f88de5d024bacb9/pdfminer.six-20181108-py2.py3-none-any.whl (5.6MB)\n",
+      "Requirement already satisfied: xlrd==1.2.0 in c:\\users\\remco\\anaconda3\\envs\\pythondata\\lib\\site-packages (from textract) (1.2.0)\n",
+      "Collecting python-pptx==0.6.18\n",
+      "  Downloading https://files.pythonhosted.org/packages/bf/86/eb979f7b0333ec769041aae36df8b9f1bd8bea5bbad44620663890dce561/python-pptx-0.6.18.tar.gz (8.9MB)\n",
+      "Collecting six==1.12.0\n",
+      "  Downloading https://files.pythonhosted.org/packages/73/fb/00a976f728d0d1fecfe898238ce23f502a721c0ac0ecfedb80e0d88c64e9/six-1.12.0-py2.py3-none-any.whl\n",
+      "Requirement already satisfied: soupsieve>=1.2 in c:\\users\\remco\\anaconda3\\envs\\pythondata\\lib\\site-packages (from beautifulsoup4==4.8.0->textract) (1.9.5)\n",
+      "Requirement already satisfied: lxml in c:\\users\\remco\\anaconda3\\envs\\pythondata\\lib\\site-packages (from EbookLib==0.17.1->textract) (4.4.1)\n",
+      "Collecting tzlocal==1.5.1\n",
+      "  Downloading https://files.pythonhosted.org/packages/cb/89/e3687d3ed99bc882793f82634e9824e62499fdfdc4b1ae39e211c5b05017/tzlocal-1.5.1.tar.gz\n",
+      "Requirement already satisfied: olefile==0.46 in c:\\users\\remco\\anaconda3\\envs\\pythondata\\lib\\site-packages (from extract-msg==0.23.1->textract) (0.46)\n",
+      "Collecting imapclient==2.1.0\n",
+      "  Downloading https://files.pythonhosted.org/packages/dc/39/e1c2c2c6e2356ab6ea81fcfc0a74b044b311d6a91a45300811d9a6077ef7/IMAPClient-2.1.0-py2.py3-none-any.whl (73kB)\n",
+      "Requirement already satisfied: sortedcontainers in c:\\users\\remco\\anaconda3\\envs\\pythondata\\lib\\site-packages (from pdfminer.six==20181108->textract) (2.1.0)\n",
+      "Collecting pycryptodome\n",
+      "  Downloading https://files.pythonhosted.org/packages/92/15/451dceb330d9ba78b4026022032e6114eeee03c0204e5e652b8b96d2d9a4/pycryptodome-3.9.7-cp36-cp36m-win_amd64.whl (14.1MB)\n",
+      "Requirement already satisfied: Pillow>=3.3.2 in c:\\users\\remco\\anaconda3\\envs\\pythondata\\lib\\site-packages (from python-pptx==0.6.18->textract) (6.2.1)\n",
+      "Requirement already satisfied: XlsxWriter>=0.5.7 in c:\\users\\remco\\anaconda3\\envs\\pythondata\\lib\\site-packages (from python-pptx==0.6.18->textract) (1.2.6)\n",
+      "Requirement already satisfied: pytz in c:\\users\\remco\\anaconda3\\envs\\pythondata\\lib\\site-packages (from tzlocal==1.5.1->extract-msg==0.23.1->textract) (2019.3)\n",
+      "Building wheels for collected packages: docx2txt, EbookLib, python-pptx, tzlocal\n",
+      "  Building wheel for docx2txt (setup.py): started\n",
+      "  Building wheel for docx2txt (setup.py): finished with status 'done'\n",
+      "  Created wheel for docx2txt: filename=docx2txt-0.8-cp36-none-any.whl size=3970 sha256=6e5902b6dc8660df8182491bca8ef972f76c26805ca16c06ed85cdf6f0eab312\n",
+      "  Stored in directory: C:\\Users\\Remco\\AppData\\Local\\pip\\Cache\\wheels\\b2\\1f\\26\\a051209bbb77fc6bcfae2bb7e01fa0ff941b82292ab084d596\n",
+      "  Building wheel for EbookLib (setup.py): started\n",
+      "  Building wheel for EbookLib (setup.py): finished with status 'done'\n",
+      "  Created wheel for EbookLib: filename=EbookLib-0.17.1-cp36-none-any.whl size=38168 sha256=b0b0dfce85664bb054319f66e8431d5f50aa5402c1325982aec3e16af7746390\n",
+      "  Stored in directory: C:\\Users\\Remco\\AppData\\Local\\pip\\Cache\\wheels\\84\\11\\01\\951369cbbf8f96878786a1f4da68bd7ac19a5d945b38e03d54\n",
+      "  Building wheel for python-pptx (setup.py): started\n",
+      "  Building wheel for python-pptx (setup.py): finished with status 'done'\n",
+      "  Created wheel for python-pptx: filename=python_pptx-0.6.18-cp36-none-any.whl size=275709 sha256=3ec91e5677a233a4b7c95ec866c85bc8f3ca5914520009ebeb019bae38ab6202\n",
+      "  Stored in directory: C:\\Users\\Remco\\AppData\\Local\\pip\\Cache\\wheels\\1f\\1f\\2c\\29acca422b420a0b5210bd2cd7e9669804520d602d2462f20b\n",
+      "  Building wheel for tzlocal (setup.py): started\n",
+      "  Building wheel for tzlocal (setup.py): finished with status 'done'\n",
+      "  Created wheel for tzlocal: filename=tzlocal-1.5.1-cp36-none-any.whl size=17548 sha256=a353c7b1ee3745397330b3e005f0d84aceee0ea9faaa7db7a0262b65a8ea395c\n",
+      "  Stored in directory: C:\\Users\\Remco\\AppData\\Local\\pip\\Cache\\wheels\\15\\ae\\df\\a67bf1ed84e9bf230187d36d8dcfd30072bea0236cb059ed91\n",
+      "Successfully built docx2txt EbookLib python-pptx tzlocal\n",
+      "Installing collected packages: docx2txt, argcomplete, beautifulsoup4, six, EbookLib, tzlocal, imapclient, extract-msg, SpeechRecognition, pycryptodome, pdfminer.six, python-pptx, textract\n",
+      "  Found existing installation: beautifulsoup4 4.8.1\n",
+      "    Uninstalling beautifulsoup4-4.8.1:\n",
+      "      Successfully uninstalled beautifulsoup4-4.8.1\n",
+      "  Found existing installation: six 1.13.0\n",
+      "    Uninstalling six-1.13.0:\n",
+      "      Successfully uninstalled six-1.13.0\n",
+      "Successfully installed EbookLib-0.17.1 SpeechRecognition-3.8.1 argcomplete-1.10.0 beautifulsoup4-4.8.0 docx2txt-0.8 extract-msg-0.23.1 imapclient-2.1.0 pdfminer.six-20181108 pycryptodome-3.9.7 python-pptx-0.6.18 six-1.12.0 textract-1.6.3 tzlocal-1.5.1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: Could not find a version that satisfies the requirement re (from versions: none)\n",
+      "ERROR: No matching distribution found for re\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install pycountry\n",
+    "!pip install pyPDF2\n",
+    "!pip install textract\n",
+    "!pip install re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +171,7 @@
        "187"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -141,7 +251,7 @@
        "187"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +394,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_normal_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +458,7 @@
        " '']"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +534,7 @@
        " '']"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1217,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1447,7 +1566,7 @@
        " ...]"
       ]
      },
-     "execution_count": 1217,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1459,16 +1578,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-21-ea6e8ee6ab1f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtext\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcombinations\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mk\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-21-ea6e8ee6ab1f>\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtext\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcombinations\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mk\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "b = [i for i in text for j in combinations if all(k in i for k in j)]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1491,9 +1623,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.3 64-bit ('base': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37364bitbasecondaf7339001cfe34b54ae1ffacfd6447597"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1505,7 +1637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
